--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ Django==2.1.5
 djangorestframework==3.9.0
 gunicorn==19.9.0
 Pillow==5.4.1
-pyyaml==3.13
+pyyaml>=4.2b1
 requests==2.21.0
 whitenoise==4.1.2
