--- a/config.yml.dist
+++ b/config.yml.dist
@@ -1,4 +1,6 @@
 django:
+  DEBUG: True
+  SECRET_KEY: 'you might wanna change this'
   database:
     ENGINE: 'django.db.backends.sqlite3'
     NAME: 'db.sqlite3'
@@ -7,4 +9,6 @@ django:
 artsy:
   x_xapp_token: ''
 rmngp:
+  api_key: ''
+rijks:
   api_key: ''
