--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
-Django>=2.0.10
-django-debug-toolbar==1.11
-djangorestframework==3.9.1
-gunicorn==19.9.0
-Pillow==5.4.1
-pyyaml>=4.2b1
-requests==2.21.0
-whitenoise==4.1.2
+asgiref==3.2.10
+dj-database-url==0.5.0
+Django==3.1
+django-debug-toolbar==2.2
+django-heroku==0.3.1
+djangorestframework==3.11.1
+Pillow==7.2.0
+protobuf==3.12.4
+psycopg2==2.8.5
+python-dotenv==0.14.0
+pytz==2020.1
+PyYAML==5.3.1
+six==1.15.0
+sqlparse==0.3.1
+whitenoise==5.2.0
