--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
-asgiref==3.2.10
+# asgiref==3.2.10
 dj-database-url==0.5.0
 Django==3.1
 django-debug-toolbar==2.2
+django-extensions==3.0.9
 django-heroku==0.3.1
+django-import-export==2.4.0
 djangorestframework==3.11.1
 Pillow==7.2.0
-protobuf==3.12.4
+# protobuf==3.12.4
 psycopg2==2.8.5
 python-dotenv==0.14.0
 pytz==2020.1
-PyYAML==5.3.1
-six==1.15.0
-sqlparse==0.3.1
+# PyYAML==5.3.1
+# six==1.15.0
+# sqlparse==0.3.1
 whitenoise==5.2.0
