--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-extensions==3.0.9
 django-heroku==0.3.1
 django-import-export==2.4.0
 djangorestframework==3.11.1
+gunicorn==19.9.0
 Pillow==7.2.0
 # protobuf==3.12.4
 psycopg2==2.8.5
