--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ python:
   - "3.7"
   - "3.8"
   - "3.9"
+env:
+  - DATABASE_URL=sqlite:///db.sqlite3
 install:
   - pip install -r requirements.txt
 script:
