--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ dj-database-url==0.5.0
 Django==3.1
 django-debug-toolbar==2.2
 django-extensions==3.0.9
+django-google-tag-manager==0.0.5
 django-heroku==0.3.1
 django-import-export==2.4.0
 djangorestframework==3.11.1
